--- a/templates/CentOS-6.2-i386-netboot/ks.cfg
+++ b/templates/CentOS-6.2-i386-netboot/ks.cfg
@@ -1,5 +1,5 @@
 install
-url --url=http://be.mirror.eurid.eu/centos/6.2/os/x86_64/
+url --url=http://mirrors.arsc.edu/centos/6.2/os/i386/
 lang en_US.UTF-8
 keyboard us
 network --bootproto dhcp
